deploy: be3ebc7ce2f8ee60fffbadf6ee4f72f7a083efca

--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
-<!DOCTYPE html><html lang="en" class="astro-MGHQNGUJ">
+<!DOCTYPE html><html data-theme="cmyk" lang="en" class="astro-5C3Y7NNH">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<title>Welcome to Astro.</title>
-<link rel="stylesheet" href="/astrosvelte/assets/asset.7c7ad634.css"></link>
+<link rel="stylesheet" href="/astrosvelte/assets/asset.9674a532.css"></link><style>astro-root, astro-fragment { display: contents; }</style><script type="module" data-astro-component-hydration>import setup from '/astrosvelte/entry.9125fc96.js';
+import 'data:text/javascript;charset=utf-8,//[no before-hydration script]';
+setup("3zU41", {name:"Counter",value: true}, async () => {
+  const [{ default: Component }, { default: hydrate }] = await Promise.all([import("/astrosvelte/entry.edf760e5.js"), import("/astrosvelte/entry.fec19fd6.js")]);
+  return (el, children) => hydrate(el)(Component, {"class":"astro-LRDQ6WZJ"}, children, {"client":"visible"});
+
+});
+</script>
 </head>
 <body>
-	<main class="astro-2KZQ4PI4">
-		<h1 class="astro-2KZQ4PI4">Welcome to <span class="text-gradient astro-2KZQ4PI4">Astro</span></h1>
-		<p class="instructions astro-2KZQ4PI4">
-			Check out the <code class="astro-2KZQ4PI4">src/pages</code> directory to get started.<br class="astro-2KZQ4PI4">
-			<strong class="astro-2KZQ4PI4">Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+	<main class="astro-LRDQ6WZJ">
+		<div class="drawer drawer-mobile astro-LRDQ6WZJ">
+			<input id="my-drawer-2" type="checkbox" class="drawer-toggle astro-LRDQ6WZJ">
+			<div class="drawer-content flex flex-col items-center justify-center astro-LRDQ6WZJ">
+				<!-- Page content here -->
+				<label for="my-drawer-2" class="btn btn-primary drawer-button lg:hidden astro-LRDQ6WZJ">Open drawer</label>
+			
+			</div> 
+			<div class="drawer-side astro-LRDQ6WZJ">
+				<label for="my-drawer-2" class="drawer-overlay astro-LRDQ6WZJ"></label> 
+				<ul class="menu p-4 overflow-y-auto w-80 bg-base-100 text-base-content astro-LRDQ6WZJ">
+				<!-- Sidebar content here -->
+				<li class="astro-LRDQ6WZJ"><a class="astro-LRDQ6WZJ">Sidebar Item 1</a></li>
+				<li class="astro-LRDQ6WZJ"><a class="astro-LRDQ6WZJ">Sidebar Item 2</a></li>
+				</ul>
+			
+			</div>
+		</div>
+		<h1 class="astro-LRDQ6WZJ">Welcome to <span class="text-gradient astro-LRDQ6WZJ">Astro</span></h1>
+		<p class="instructions astro-LRDQ6WZJ">
+			Check out the <code class="astro-LRDQ6WZJ">src/pages</code> directory to get started.<br class="astro-LRDQ6WZJ">
+			<strong class="astro-LRDQ6WZJ">Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
 		</p>
-		<ul role="list" class="link-card-grid astro-2KZQ4PI4">
+		<ul role="list" class="link-card-grid astro-LRDQ6WZJ">
 			<li class="link-card astro-3G7BJKTN">
     <a href="https://docs.astro.build/" class="astro-3G7BJKTN">
         <h2 class="astro-3G7BJKTN">
@@ -63,6 +87,11 @@
 </li>
 
 		</ul>
+			<astro-root uid="3zU41"><div class="counter svelte-1fqcoo4"><button>-</button>
+    <pre>0</pre>
+    <button>+</button></div>
+  <div class="message svelte-1fqcoo4"><astro-fragment><h1 class="astro-LRDQ6WZJ">Hello, Svelte!</h1><a href="https://strawpoll.vote/polls/zhz5zxjc/vote" class="astro-LRDQ6WZJ"> Vote Now!</a></astro-fragment>
+  </div></astro-root>
 	</main>
 
 </body></html>
