deploy: 1c0bdc407be6b967a6150a726a6d0c069d3682b6

--- a/index.html
+++ b/index.html
@@ -1,98 +1,55 @@
-<!DOCTYPE html><html data-theme="cmyk" lang="en" class="astro-5C3Y7NNH">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<title>Welcome to Astro.</title>
-<link rel="stylesheet" href="/astrosvelte/assets/asset.9674a532.css"></link><style>astro-root, astro-fragment { display: contents; }</style><script type="module" data-astro-component-hydration>import setup from '/astrosvelte/entry.9125fc96.js';
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Welcome to Astro.</title>
+  <link rel="stylesheet" href="/astrosvelte/assets/asset.05399679.css"></link><style>astro-root, astro-fragment { display: contents; }</style><script type="module" data-astro-component-hydration>import setup from '/astrosvelte/entry.9f59b8ca.js';
 import 'data:text/javascript;charset=utf-8,//[no before-hydration script]';
-setup("3zU41", {name:"Counter",value: true}, async () => {
-  const [{ default: Component }, { default: hydrate }] = await Promise.all([import("/astrosvelte/entry.edf760e5.js"), import("/astrosvelte/entry.fec19fd6.js")]);
-  return (el, children) => hydrate(el)(Component, {"class":"astro-LRDQ6WZJ"}, children, {"client":"visible"});
+setup("vhcb8", {name:"GameShowcase",value: true}, async () => {
+  const [{ default: Component }, { default: hydrate }] = await Promise.all([import("/astrosvelte/entry.4b5d3e10.js"), import("/astrosvelte/entry.ae8e0867.js")]);
+  return (el, children) => hydrate(el)(Component, {"games":[{"name":"🏁 Combo Racer","body":"Collect powerups and combo them to win the race","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FdQw4w9WgXcQ"},{"name":"⭐ Collectathon","body":"Collect all the things","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FdQw4w9WgXcQ"},{"name":"🎲 Board Game","body":"Buy out the board and bankrupt other players to win","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FdQw4w9WgXcQ"},{"name":"👻 Abandoned Asylum","body":"Survive a night in the Abandoned Asylum","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FdQw4w9WgXcQ"},{"name":"🔪 Murder Mystery","body":"Find clues and Question witnesses to find the murderer","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FdQw4w9WgXcQ"},{"name":"🧙 ARPG","body":"Tag Team ARPG, swap in when other players die","video":"https:\u002F\u002Fyoutube.com\u002Fembed\u002FoPDMSB58NZM"}]}, children, {"client":"load"});
 
 });
 </script>
 </head>
-<body>
-	<main class="astro-LRDQ6WZJ">
-		<div class="drawer drawer-mobile astro-LRDQ6WZJ">
-			<input id="my-drawer-2" type="checkbox" class="drawer-toggle astro-LRDQ6WZJ">
-			<div class="drawer-content flex flex-col items-center justify-center astro-LRDQ6WZJ">
-				<!-- Page content here -->
-				<label for="my-drawer-2" class="btn btn-primary drawer-button lg:hidden astro-LRDQ6WZJ">Open drawer</label>
-			
-			</div> 
-			<div class="drawer-side astro-LRDQ6WZJ">
-				<label for="my-drawer-2" class="drawer-overlay astro-LRDQ6WZJ"></label> 
-				<ul class="menu p-4 overflow-y-auto w-80 bg-base-100 text-base-content astro-LRDQ6WZJ">
-				<!-- Sidebar content here -->
-				<li class="astro-LRDQ6WZJ"><a class="astro-LRDQ6WZJ">Sidebar Item 1</a></li>
-				<li class="astro-LRDQ6WZJ"><a class="astro-LRDQ6WZJ">Sidebar Item 2</a></li>
-				</ul>
-			
-			</div>
-		</div>
-		<h1 class="astro-LRDQ6WZJ">Welcome to <span class="text-gradient astro-LRDQ6WZJ">Astro</span></h1>
-		<p class="instructions astro-LRDQ6WZJ">
-			Check out the <code class="astro-LRDQ6WZJ">src/pages</code> directory to get started.<br class="astro-LRDQ6WZJ">
-			<strong class="astro-LRDQ6WZJ">Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid astro-LRDQ6WZJ">
-			<li class="link-card astro-3G7BJKTN">
-    <a href="https://docs.astro.build/" class="astro-3G7BJKTN">
-        <h2 class="astro-3G7BJKTN">
-            Documentation
-            <span class="astro-3G7BJKTN">&rarr;</span>
-        </h2>
-        <p class="astro-3G7BJKTN">
-            Learn how Astro works and explore the official API docs.
-        </p>
-    </a>
-</li>
- 
-			<li class="link-card astro-3G7BJKTN">
-    <a href="https://astro.build/integrations/" class="astro-3G7BJKTN">
-        <h2 class="astro-3G7BJKTN">
-            Integrations
-            <span class="astro-3G7BJKTN">&rarr;</span>
-        </h2>
-        <p class="astro-3G7BJKTN">
-            Supercharge your project with new frameworks and libraries.
-        </p>
-    </a>
-</li>
- 
-			<li class="link-card astro-3G7BJKTN">
-    <a href="https://astro.build/themes/" class="astro-3G7BJKTN">
-        <h2 class="astro-3G7BJKTN">
-            Themes
-            <span class="astro-3G7BJKTN">&rarr;</span>
-        </h2>
-        <p class="astro-3G7BJKTN">
-            Explore a galaxy of community-built starter themes.
-        </p>
-    </a>
-</li>
- 
-			<li class="link-card astro-3G7BJKTN">
-    <a href="https://astro.build/chat/" class="astro-3G7BJKTN">
-        <h2 class="astro-3G7BJKTN">
-            Chat
-            <span class="astro-3G7BJKTN">&rarr;</span>
-        </h2>
-        <p class="astro-3G7BJKTN">
-            Come say hi to our amazing Discord community. ❤️
-        </p>
-    </a>
-</li>
-
-		</ul>
-			<astro-root uid="3zU41"><div class="counter svelte-1fqcoo4"><button>-</button>
-    <pre>0</pre>
-    <button>+</button></div>
-  <div class="message svelte-1fqcoo4"><astro-fragment><h1 class="astro-LRDQ6WZJ">Hello, Svelte!</h1><a href="https://strawpoll.vote/polls/zhz5zxjc/vote" class="astro-LRDQ6WZJ"> Vote Now!</a></astro-fragment>
-  </div></astro-root>
-	</main>
-
+  <body>    
+    <div class="hero h-[20rem] py-15 bg-base-200">
+      <div class="hero-content text-center">
+        <div class="max-w-md">
+          <h1 class="text-5xl font-bold">🎉Birthday🎉 Prototype Showdown!</h1>
+          <p class="py-10">Choose what game becomes this year's birthday game. 
+            Every few weeks the games will be ranked, and we eliminate the last place game.</p>        
+        </div>
+      </div>
+    </div><astro-root uid="vhcb8"><div class="flex flex-row hero"><div class="w-1/5 pl-15"><div class="grid grid-cols-1"><ul class="menu p-4 overflow-y-auto bg-base-100 text-base-content"><li><button class="btn glass">🏁 Combo Racer</button></li><li><button class="btn glass">⭐ Collectathon</button></li><li><button class="btn glass">🎲 Board Game</button></li><li><button class="btn glass">👻 Abandoned Asylum</button></li><li><button class="btn glass">🔪 Murder Mystery</button></li><li><button class="btn glass">🧙 ARPG</button></li></ul></div></div>
+   <div class="divider divider-horizontal"></div>
+   <div class="w-4/5 pr-4 pb-10"><div><h2 class="text-4xl font-bold pt-5">🏁 Combo Racer</h2>
+    <p class="text-lg pt-4 pb-5">Collect powerups and combo them to win the race</p>
+    <div>
+        <iframe title="video" width="1000" height="500" src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe></div></div></div></div></astro-root><div class="border-base-300 bg-base-200 rounded-b-box rounded-tr-box flex min-h-[7rem] min-w-screen max-w-screen flex-wrap items-center justify-center gap-2 overflow-x-hidden border bg-cover bg-top p-4 undefined">
+   		<button class="btn btn-wide btn-primary"> Vote Now!</button>
+	</div>    
+  <footer class="footer p-10 bg-neutral text-neutral-content">
+    <div>
+      <span class="footer-title">Services</span> 
+      <a class="link link-hover">Branding</a>
+      <a class="link link-hover">Design</a>
+      <a class="link link-hover">Marketing</a>
+      <a class="link link-hover">Advertisement</a>
+    </div> 
+    <div>
+      <span class="footer-title">Company</span> 
+      <a class="link link-hover">About us</a>
+      <a class="link link-hover">Contact</a>
+      <a class="link link-hover">Jobs</a>
+      <a class="link link-hover">Press kit</a>
+    </div> 
+    <div>
+      <span class="footer-title">Legal</span> 
+      <a class="link link-hover">Terms of use</a>
+      <a class="link link-hover">Privacy policy</a>
+      <a class="link link-hover">Cookie policy</a>
+    </div>
+  </footer>
 </body></html>
-
