deploy: 01d41dd1ce5da41a2fb124c6a56f8ae11d8d7260

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Welcome to Astro.</title>
+    <title>Birthday Prototype Showdown</title>
   <link rel="stylesheet" href="/astrosvelte/assets/asset.05399679.css"></link><style>astro-root, astro-fragment { display: contents; }</style><script type="module" data-astro-component-hydration>import setup from '/astrosvelte/entry.9f59b8ca.js';
 import 'data:text/javascript;charset=utf-8,//[no before-hydration script]';
-setup("vhcb8", {name:"GameShowcase",value: true}, async () => {
+setup("Z28rSr", {name:"GameShowcase",value: true}, async () => {
   const [{ default: Component }, { default: hydrate }] = await Promise.all([import("/astrosvelte/entry.4b5d3e10.js"), import("/astrosvelte/entry.ae8e0867.js")]);
-  return (el, children) => hydrate(el)(Component, {"games":[{"name":"🏁 Combo Racer","body":"Collect powerups and combo them to win the race","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FdQw4w9WgXcQ"},{"name":"⭐ Collectathon","body":"Collect all the things","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FdQw4w9WgXcQ"},{"name":"🎲 Board Game","body":"Buy out the board and bankrupt other players to win","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FdQw4w9WgXcQ"},{"name":"👻 Abandoned Asylum","body":"Survive a night in the Abandoned Asylum","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FdQw4w9WgXcQ"},{"name":"🔪 Murder Mystery","body":"Find clues and Question witnesses to find the murderer","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FdQw4w9WgXcQ"},{"name":"🧙 ARPG","body":"Tag Team ARPG, swap in when other players die","video":"https:\u002F\u002Fyoutube.com\u002Fembed\u002FoPDMSB58NZM"}]}, children, {"client":"load"});
+  return (el, children) => hydrate(el)(Component, {"games":[{"name":"🏁 Combo Racer","body":"Collect powerups and combo them to win the race","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002F09FmnHcsZcQ"},{"name":"⭐ Collectathon","body":"Collect all the things","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FpRc2lfOVWfk"},{"name":"🎲 Board Game","body":"Buy out the board and bankrupt other players to win","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FfUQboaTv45Y"},{"name":"👻 Abandoned Asylum","body":"Survive a night in the Abandoned Asylum","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FZ08VCvUJK9o"},{"name":"🔪 Murder Mystery","body":"Find clues and Question witnesses to find the murderer","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002F6TNp-uW22-8"},{"name":"🧙 ARPG","body":"Tag Team ARPG, swap in when other players die","video":"https:\u002F\u002Fyoutube.com\u002Fembed\u002FoPDMSB58NZM"}]}, children, {"client":"load"});
 
 });
 </script>
@@ -22,13 +22,15 @@ setup("vhcb8", {name:"GameShowcase",value: true}, async () => {
             Every few weeks the games will be ranked, and we eliminate the last place game.</p>        
         </div>
       </div>
-    </div><astro-root uid="vhcb8"><div class="flex flex-row hero"><div class="w-1/5 pl-15"><div class="grid grid-cols-1"><ul class="menu p-4 overflow-y-auto bg-base-100 text-base-content"><li><button class="btn glass">🏁 Combo Racer</button></li><li><button class="btn glass">⭐ Collectathon</button></li><li><button class="btn glass">🎲 Board Game</button></li><li><button class="btn glass">👻 Abandoned Asylum</button></li><li><button class="btn glass">🔪 Murder Mystery</button></li><li><button class="btn glass">🧙 ARPG</button></li></ul></div></div>
+    </div><astro-root uid="Z28rSr"><div class="flex flex-row hero"><div class="w-1/5 pl-15"><div class="grid grid-cols-1"><ul class="menu p-4 overflow-y-auto bg-base-100 text-base-content"><li><button class="btn glass">🏁 Combo Racer</button></li><li><button class="btn glass">⭐ Collectathon</button></li><li><button class="btn glass">🎲 Board Game</button></li><li><button class="btn glass">👻 Abandoned Asylum</button></li><li><button class="btn glass">🔪 Murder Mystery</button></li><li><button class="btn glass">🧙 ARPG</button></li></ul></div></div>
    <div class="divider divider-horizontal"></div>
    <div class="w-4/5 pr-4 pb-10"><div><h2 class="text-4xl font-bold pt-5">🏁 Combo Racer</h2>
     <p class="text-lg pt-4 pb-5">Collect powerups and combo them to win the race</p>
     <div>
-        <iframe title="video" width="1000" height="500" src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe></div></div></div></div></astro-root><div class="border-base-300 bg-base-200 rounded-b-box rounded-tr-box flex min-h-[7rem] min-w-screen max-w-screen flex-wrap items-center justify-center gap-2 overflow-x-hidden border bg-cover bg-top p-4 undefined">
-   		<button class="btn btn-wide btn-primary"> Vote Now!</button>
+        <iframe title="video" width="1000" height="500" src="https://www.youtube.com/embed/09FmnHcsZcQ"></iframe></div></div></div></div></astro-root><div class="border-base-300 bg-base-200 rounded-b-box rounded-tr-box flex min-h-[7rem] min-w-screen max-w-screen flex-wrap items-center justify-center gap-2 overflow-x-hidden border bg-cover bg-top p-4 undefined">
+   		<button class="btn btn-wide btn-primary"> 
+		   <a target="_blank" href="https://strawpoll.vote/polls/zhz5zxjc/vote?s=0">Vote Now!</a>
+		</button>
 	</div>    
   <footer class="footer p-10 bg-neutral text-neutral-content">
     <div>
