--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthday Prototype Showdown</title>
-  <link rel="stylesheet" href="/astrosvelte/assets/asset.05399679.css"></link><style>astro-root, astro-fragment { display: contents; }</style><script type="module" data-astro-component-hydration>import setup from '/astrosvelte/entry.9f59b8ca.js';
+  <link rel="stylesheet" href="/astrosvelte/assets/asset.fdbef8e8.css"></link><style>astro-root, astro-fragment { display: contents; }</style><script type="module" data-astro-component-hydration>import setup from '/astrosvelte/entry.9f59b8ca.js';
 import 'data:text/javascript;charset=utf-8,//[no before-hydration script]';
-setup("Z28rSr", {name:"GameShowcase",value: true}, async () => {
-  const [{ default: Component }, { default: hydrate }] = await Promise.all([import("/astrosvelte/entry.4b5d3e10.js"), import("/astrosvelte/entry.ae8e0867.js")]);
+setup("te3nQ", {name:"GameShowcase",value: true}, async () => {
+  const [{ default: Component }, { default: hydrate }] = await Promise.all([import("/astrosvelte/entry.18e797ef.js"), import("/astrosvelte/entry.24334a53.js")]);
   return (el, children) => hydrate(el)(Component, {"games":[{"name":"🏁 Combo Racer","body":"Collect powerups and combo them to win the race","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002F09FmnHcsZcQ"},{"name":"⭐ Collectathon","body":"Collect all the things","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FpRc2lfOVWfk"},{"name":"🎲 Board Game","body":"Buy out the board and bankrupt other players to win","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FfUQboaTv45Y"},{"name":"👻 Abandoned Asylum","body":"Survive a night in the Abandoned Asylum","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002FZ08VCvUJK9o"},{"name":"🔪 Murder Mystery","body":"Find clues and Question witnesses to find the murderer","video":"https:\u002F\u002Fwww.youtube.com\u002Fembed\u002F6TNp-uW22-8"},{"name":"🧙 ARPG","body":"Tag Team ARPG, swap in when other players die","video":"https:\u002F\u002Fyoutube.com\u002Fembed\u002FoPDMSB58NZM"}]}, children, {"client":"load"});
 
 });
@@ -22,15 +22,12 @@ setup("Z28rSr", {name:"GameShowcase",value: true}, async () => {
             Every few weeks the games will be ranked, and we eliminate the last place game.</p>        
         </div>
       </div>
-    </div><astro-root uid="Z28rSr"><div class="flex flex-row hero"><div class="w-1/5 pl-15"><div class="grid grid-cols-1"><ul class="menu p-4 overflow-y-auto bg-base-100 text-base-content"><li><button class="btn glass">🏁 Combo Racer</button></li><li><button class="btn glass">⭐ Collectathon</button></li><li><button class="btn glass">🎲 Board Game</button></li><li><button class="btn glass">👻 Abandoned Asylum</button></li><li><button class="btn glass">🔪 Murder Mystery</button></li><li><button class="btn glass">🧙 ARPG</button></li></ul></div></div>
+    </div><astro-root uid="te3nQ"><div class="flex sm:flex-row flex-col hero"><div class="sm:w-1/5 sm:pl-15 pl-0 w-100"><div class="grid grid-cols-1"><ul class="menu p-4 overflow-y-auto bg-base-100 text-base-content"><li><button class="btn glass">🏁 Combo Racer</button></li><li><button class="btn glass">⭐ Collectathon</button></li><li><button class="btn glass">🎲 Board Game</button></li><li><button class="btn glass">👻 Abandoned Asylum</button></li><li><button class="btn glass">🔪 Murder Mystery</button></li><li><button class="btn glass">🧙 ARPG</button></li></ul></div></div>
    <div class="divider divider-horizontal"></div>
    <div class="w-4/5 pr-4 pb-10"><div><h2 class="text-4xl font-bold pt-5">🏁 Combo Racer</h2>
     <p class="text-lg pt-4 pb-5">Collect powerups and combo them to win the race</p>
-    <div>
-        <iframe title="video" width="1000" height="500" src="https://www.youtube.com/embed/09FmnHcsZcQ"></iframe></div></div></div></div></astro-root><div class="border-base-300 bg-base-200 rounded-b-box rounded-tr-box flex min-h-[7rem] min-w-screen max-w-screen flex-wrap items-center justify-center gap-2 overflow-x-hidden border bg-cover bg-top p-4 undefined">
-   		<button class="btn btn-wide btn-primary"> 
-		   <a target="_blank" href="https://strawpoll.vote/polls/zhz5zxjc/vote?s=0">Vote Now!</a>
-		</button>
+    <div style="position:relative;padding-bottom:56.25%;"><iframe title="video" style="width:100%;height:100%;position:absolute;left:0px;top:0px;" width="100%" height="100%" frameborder="0" allowfullscreen src="https://www.youtube.com/embed/09FmnHcsZcQ"></iframe></div></div></div></div></astro-root><div class="border-base-300 bg-base-200 rounded-b-box rounded-tr-box flex min-h-[7rem] min-w-screen max-w-screen flex-wrap items-center justify-center gap-2 overflow-x-hidden border bg-cover bg-top p-4 undefined">
+		<a target="_blank" class="btn btn-wide btn-primary" href="https://strawpoll.vote/polls/zhz5zxjc/vote?s=0">Vote Now!</a>
 	</div>    
   <footer class="footer p-10 bg-neutral text-neutral-content">
     <div>
